--- a/index.html
+++ b/index.html
@@ -27,6 +27,7 @@
     <link rel="stylesheet" href="/static/css/components/placeholder.css">
 
     <link rel="stylesheet" href="/static/css/pages/executable_list.css">
+    <link rel="stylesheet" href="/static/css/pages/logs.css">
     <link rel="stylesheet" href="/static/css/pages/content.css">
 </head>
 <body>
