controllers: add config page

--- a/index.html
+++ b/index.html
@@ -29,6 +29,8 @@
     <link rel="stylesheet" href="/static/css/pages/executable_list.css">
     <link rel="stylesheet" href="/static/css/pages/logs.css">
     <link rel="stylesheet" href="/static/css/pages/content.css">
+    <link rel="stylesheet" href="/static/css/pages/config.css">
+    <link rel="stylesheet" href="/static/css/pages/index.css">
 </head>
 <body>
     <div id="app"></div>
