support for floating windows

--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <script src="/static/js/node_modules/umbrellajs/umbrella.js"></script>
     <script src="/static/js/node_modules/@andypf/json-viewer/dist/iife/index.js"></script>
     <script type="text/javascript" src="/static/js/node_modules/dompurify/dist/purify.min.js"></script>
+    <script src="/static/js/node_modules/interactjs/dist/interact.js"></script>
 
     <link rel="shortcut icon" href="/static/images/favicon.png" type="image/x-icon">
     <link rel="stylesheet" href="/static/css/palette.css">
@@ -25,6 +26,7 @@
     <link rel="stylesheet" href="/static/css/components/messagebox.css">
     <link rel="stylesheet" href="/static/css/components/pagination.css">
     <link rel="stylesheet" href="/static/css/components/placeholder.css">
+    <link rel="stylesheet" href="/static/css/components/floating_window.css">
 
     <link rel="stylesheet" href="/static/css/pages/executable.css">
     <link rel="stylesheet" href="/static/css/pages/logs.css">
