add search page

--- a/index.html
+++ b/index.html
@@ -20,6 +20,7 @@
     <link rel="stylesheet" href="/static/css/page/navigation.css">
 
     <link rel="stylesheet" href="/static/css/components/argument.css">
+    <link rel="stylesheet" href="/static/css/components/scroll_element.css">
     <link rel="stylesheet" href="/static/css/components/horizontal_mini_tabs.css">
     <link rel="stylesheet" href="/static/css/components/horizontal_sub_tabs.css">
     <link rel="stylesheet" href="/static/css/components/horizontal_tabs.css">
